...
            "state" : "translated",
            "value" : "ポモジェムProの説明を開きます"
          }
        }
      }
    },
    "メニュー" : {
      "comment" : "Home's menu button and the menu sheet's title",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Menu"
...
